--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/netbeans,windows,macos,linux,visualstudiocode
+/target/
