--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 
 script:
   - mvn test
-  - if [[ $TRAVIS_BRANCH == 'master' ]]; then mvn -Dremote.user=$REMOTE_USER -Dremote.password=$REMOTE_PW tomcat7:deploy; fi
+  - if [[ $TRAVIS_BRANCH == 'main' ]]; then mvn -Dremote.user=$REMOTE_USER -Dremote.password=$REMOTE_PW tomcat7:deploy; fi
 
 services:
    - mysql
@@ -29,7 +29,7 @@ before_script:
 - sudo -E apt-get -y install mysql-server
 
 - sudo mysql -u root -e "CREATE User 'dev'@'localhost' IDENTIFIED BY 'ax2'; GRANT ALL PRIVILEGES ON *.* TO 'dev'@'localhost' WITH GRANT OPTION;"
-- sudo mysql -u dev -pax2 -e "CREATE DATABASE CA1_test;"
+- sudo mysql -u dev -pax2 -e "CREATE DATABASE CA2_test;"
 
 - mysql --version
 - echo "before_script Complete"
