--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dk.newbiz</groupId>
-    <artifactId>CA2</artifactId>
+    <artifactId>CA2_Backend</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
 
